@@ -1,3 +1,8 @@
+2007-05-22  Michael Natterer  <mitch@gimp.org>
+
+	* app/vectors/gimpvectors-warp.c (gimp_stroke_warp_point): don't
+	leak three GimpCoords per warped point (eek).
+
 2007-05-21  Sven Neumann  <sven@gimp.org>
 
 	* themes/Default/images/preferences/Makefile.am: formatting.
